@@ -73,8 +73,6 @@ copy = Makefile.PL
 [Test::EOL / @Author::KENTNL/Test::EOL]
 trailing_whitespace = 1
 
-[Test::MinimumVersion / @Author::KENTNL/Test::MinimumVersion]
-
 [Test::Compile::PerFile / @Author::KENTNL/Test::Compile::PerFile]
 
 [Test::Perl::Critic / @Author::KENTNL/Test::Perl::Critic]
@@ -89,6 +87,7 @@ normal_form = normal_3
 replacer = replace_with_blank
 
 [AutoPrereqs / @Author::KENTNL/AutoPrereqs]
+finder = :InstallModules
 
 [Prereqs / @Author::KENTNL/BundleDevelSuggests]
 -phase = develop
@@ -99,6 +98,7 @@ Dist::Zilla::PluginBundle::Author::KENTNL = 2.025001
 [Prereqs::AuthorDeps / @Author::KENTNL/Prereqs::AuthorDeps]
 
 [MinimumPerl / @Author::KENTNL/MinimumPerl]
+runtime_finder = :InstallModules
 
 [Authority / @Author::KENTNL/Authority]
 :version = 1.006
@@ -235,7 +235,6 @@ Dist::Zilla::Plugin::Test::CPAN::Changes = 0
 Dist::Zilla::Plugin::Test::Compile::PerFile = 0
 Dist::Zilla::Plugin::Test::EOL = 0
 Dist::Zilla::Plugin::Test::Kwalitee = 0
-Dist::Zilla::Plugin::Test::MinimumVersion = 0
 Dist::Zilla::Plugin::Test::Perl::Critic = 0
 Dist::Zilla::Plugin::Test::ReportPrereqs = 0
 Dist::Zilla::Plugin::TestRelease = 0
