@@ -15,6 +15,9 @@ toolkit           = eumm
 toolkit_hardness  = soft
 srcreadme         = mkdn
 twitter_extra_hash_tags = #gentoo
+AutoPrereqs.finder = :InstallModules
+MinimumPerl.runtime_finder = :InstallModules
+-remove = Test::MinimumVersion
 
 ;version_major     = 0
 ;version_minor     = 1
